--- a/private-tour.html
+++ b/private-tour.html
@@ -141,7 +141,7 @@
             font-size: 1.6rem;
 
         }
-       
+
 
         .nav {
             list-style: none;
@@ -661,6 +661,7 @@
             text-align: justify;
             font-size: small;
         }
+
         ul {
             list-style: none;
             /* text-align: justify; */
@@ -703,13 +704,15 @@
             mix-blend-mode: screen;
         }
 
-        @media screen and (max-width:576px) {  
-            .main-head>.left{
-                font-size:0.6rem;
-            } 
-            .main-head>.right{
+        @media screen and (max-width:576px) {
+            .main-head>.left {
+                font-size: 0.6rem;
+            }
+
+            .main-head>.right {
                 font-size: 0.8rem;
             }
+
             /* .main-head>.right {
                 width: 40%;
             } */
@@ -718,9 +721,11 @@
                 font-size: 0.7rem;
                 padding: 5px;
             }
+
             .right button {
-            padding: 0;
+                padding: 0;
             }
+
             .tg {
                 grid-template-columns: 100%;
                 gap: 40px
@@ -729,19 +734,23 @@
             .speed-boat>:nth-child(2) {
                 font-size: 1.6em;
             }
-            .nav>div{
+
+            .nav>div {
                 display: grid;
                 /* grid-template-columns: repeat(2,50%); */
-                grid-template-columns:30% 30% 40%;
+                grid-template-columns: 30% 30% 40%;
                 justify-content: space-between;
                 text-align: left;
             }
-            .nav{
+
+            .nav {
                 padding: 0;
             }
-            .nav a{
+
+            .nav a {
                 font-size: 0.6rem;
             }
+
             .tailor,
             .group {
                 margin: 0;
@@ -763,10 +772,15 @@
 
             #date,
             #an,
-            #cn,#select,#fn,#ln,#mail,#ph{   
+            #cn,
+            #select,
+            #fn,
+            #ln,
+            #mail,
+            #ph {
                 width: 100%;
             }
-           
+
 
             .grey {
                 grid-template-columns: 48% 48%;
@@ -777,14 +791,17 @@
                 width: 100%;
                 height: 100px;
             }
-            .getin{
+
+            .getin {
                 width: 100%;
             }
+
             .a,
             .f {
                 overflow: hidden;
             }
-            .privatize>:nth-child(2){
+
+            .privatize>:nth-child(2) {
                 width: 100%;
             }
 
@@ -792,10 +809,13 @@
                 padding: 0;
                 gap: 10px;
             }
-            .pic1,.pic2{
+
+            .pic1,
+            .pic2 {
                 grid-template-columns: 100%;
                 gap: 10px;
             }
+
             .expert {
                 padding: 0;
                 grid-template-columns: 100%;
@@ -810,7 +830,8 @@
                 padding: 10px;
                 row-gap: 30px;
             }
-            .last>:first-child{
+
+            .last>:first-child {
                 padding: 20px 40px;
             }
 
@@ -818,62 +839,75 @@
                 margin: 20px;
                 text-align: center;
             }
+
             .check-dates {
                 justify-content: center;
                 font-size: 0.4rem;
                 padding: 10px;
             }
+
             .fant-box {
                 padding: 0;
             }
 
-            .fant-box3{
+            .fant-box3 {
                 grid-template-columns: 100%;
             }
+
             .foot-bg {
                 padding: 10px;
             }
-            .book-now{
+
+            .book-now {
                 font-size: 0.8rem;
                 align-items: center;
             }
+
             .book-now img {
                 padding: 8px;
             }
+
             .foot {
                 grid-template-columns: 46% 46%;
                 justify-content: space-between;
                 /* font-size: medium; */
-                gap:17px;
+                gap: 17px;
 
             }
-            #footer{
+
+            #footer {
                 font-size: small;
             }
 
             .foot-a {
                 grid-column: span 2;
             }
-            .fee{
+
+            .fee {
                 width: 7%;
             }
         }
+
         @media screen and (max-width:320px) {
-            .nav>div{
+            .nav>div {
                 grid-template-columns: 100%;
                 font-size: small;
             }
-            .book-now{
+
+            .book-now {
                 font-size: 0.5em;
                 align-items: center;
             }
-            .check-dates button{
+
+            .check-dates button {
                 padding: 7px;
             }
-            .check-dates{
+
+            .check-dates {
                 padding: 0;
             }
-            .grey{
+
+            .grey {
                 grid-template-columns: 100%;
             }
         }
@@ -900,7 +934,8 @@
             </div>
             <div class="right">
                 <button><a href="#telephone"><i class="fa-solid fa-phone" style="margin: 5px;"></i>GET IN
-                            TOUCH</a></button></div>
+                        TOUCH</a></button>
+            </div>
         </div>
         <ul class="nav">
             <div class="nav-div">
@@ -1112,7 +1147,8 @@
                 <div class="f">
                     <div>
                         <h3>Lorem ipsum Dolar Sit</h3>
-                        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus deleniti, consequuntur </div>
+                        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus deleniti, consequuntur
+                        </div>
                     </div>
                 </div>
             </div>
@@ -1215,13 +1251,13 @@
             </div>
             <div class="foot-b">
                 <h6>ABOUT US</h6>
-                    <ul>
-                        <li>ABOUT ECOTOUR</li>
-                        <li>BARHONA</li>
-                        <li>OUR TEAM</li>
-                        <li>GUESTBOOK</li>
-                        <li>IMPRINT</li>
-                    </ul>
+                <ul>
+                    <li>ABOUT ECOTOUR</li>
+                    <li>BARHONA</li>
+                    <li>OUR TEAM</li>
+                    <li>GUESTBOOK</li>
+                    <li>IMPRINT</li>
+                </ul>
             </div>
             <div class="foot-c">
                 <h6>CUSTOMER SERVICE</h6>
