--- a/private-tour.html
+++ b/private-tour.html
@@ -160,7 +160,9 @@
             justify-content: space-evenly;
             z-index: 2;
         }
-
+        .nav-div li{
+            padding: 0;
+        }
         .nav a {
             color: rgb(0 0 0);
             font-size: large;
@@ -523,7 +525,7 @@
         }
 
         .last>:first-child {
-            padding: 40px 65px;
+            padding: 40px 74px;
         }
 
         .guide {
@@ -535,7 +537,7 @@
         }
 
         .meet-guides {
-            margin: 0 0 20px 67px;
+            margin: 0 0 20px 86px;
         }
 
         .expert button {
@@ -553,8 +555,9 @@
         }
 
         .fant-box2 {
+            width: 93%;
             background-color: white;
-            padding: 30px;
+            padding: 10px;
         }
 
         .fant-box2>:first-child {
@@ -645,12 +648,10 @@
             /* grid-template-columns:20% 13% 18% 20% 14%; */
             grid-template-columns: 18% 15% 18% 20% 12%;
             /* grid-template-columns: repeat(5, 1fr); */
-            gap: 30px;
             width: 90%;
             margin: auto;
             padding: 50px 0;
-
-
+            justify-content: space-between;
         }
 
         .foot h6 {
@@ -669,7 +670,7 @@
             line-height: 1.5;
         }
 
-        li {
+        li{
             padding: 10px 0;
             font-size: smaller;
         }
@@ -831,9 +832,9 @@
                 row-gap: 30px;
             }
 
-            .last>:first-child {
+            /* .last>:first-child {
                 padding: 20px 40px;
-            }
+            } */
 
             .meet-guides {
                 margin: 20px;
