--- a/private-tour.html
+++ b/private-tour.html
@@ -853,6 +853,10 @@
                 padding: 0;
             }
 
+            .fant-box2 {
+                width: 100%;
+            }
+
             .fant-box3 {
                 grid-template-columns: 100%;
             }
@@ -862,12 +866,12 @@
             }
 
             .book-now {
-                font-size: 0.8rem;
+                font-size: 0.9rem;
                 align-items: center;
             }
 
             .book-now img {
-                padding: 8px;
+                margin: 5px;
             }
 
             .foot {
