--- a/tour-list.html
+++ b/tour-list.html
@@ -188,7 +188,7 @@
         .main::after {
             content: '';
             position: absolute;
-            top: 0;
+            top: 1px;
             left: 0;
             background-position: top;
             background: url(images/splash1.webp);
@@ -403,7 +403,7 @@
             width: 100%;
             height: 100%;
             position: absolute;
-            top: 1;
+            top: -1px;
             left: 0;
             background: url(images/splash2.webp);
             background-size: cover;
