--- a/private-tour-popup.html
+++ b/private-tour-popup.html
@@ -64,15 +64,15 @@
 
     .row1 {
         display: flex;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
         align-items: center;
         justify-content: space-between;
         padding: 15px 0;
     }
 
-    .row1>div {
+    /* .row1>div {
         width: 30%
-    }
+    } */
 
     .row1>div:first-child i {
         border: 0;
@@ -419,7 +419,7 @@
         display: flex;
         align-items: end;
         background-size: cover;
-        padding: 0 30px;
+        padding: 0 10px;
     }
 
     .head3 {
@@ -681,9 +681,9 @@
         padding-bottom: 10px;
     }
 
-    .footer1>p:first-child,
-    .footer2>p:first-child,
-    .footer3>p:first-child {
+    .footer1>h3,
+    .footer2>h3,
+    .footer3>h3 {
         color: #9bcd52;
         font-size: 15px;
         padding-top: 10px;
@@ -724,13 +724,20 @@
     }
 
     @media only screen and (max-width: 576px) {
-        .row1>div:first-child {
-            width: 10%;
+        
+        .row1{
+            column-gap: 25px;
+            justify-content: flex-start;
+        }
+        .menusection ul{
+            justify-content: flex-start;
         }
 
+        .menusection{
+            top: 78px;
+        }
         .row1>div:last-child>button {
-            font-size: 6px;
-            padding: 5px;
+            display: none;
         }
 
         .row1>div:last-child>button i {
@@ -763,6 +770,7 @@
 
         .head2 {
             grid-template-columns: 100%;
+            gap: 5px;
         }
 
         .head2b>p,
@@ -771,11 +779,19 @@
         .head3b>p,
         .head3c>p {
             margin-top: 100px;
+            font-size: 1.5rem;
         }
 
+        .head2a1>p:first-child{
+            font-size: 1.5rem;
+        }
+        .head2a1>p:last-child{
+            font-size: 0.8rem;
+        }
         .head3 {
             grid-template-columns: 100%;
             height: 600px;
+            gap: 5px;
         }
 
         .contain {
@@ -830,7 +846,21 @@
 
         .footer {
             grid-template-columns: 100%;
-            padding-top: 80px;
+            padding-top: 90px;
+            gap: 17px;
+        }
+
+        .footer > div > h3{
+            font-size: 0.8rem;
+            font-weight: 900;
+        }
+
+        .footer1 > div > p , .footer2 > div > p {
+            font-size: 0.7rem;
+        }
+
+        .footer1 p{
+            font-size: 0.8rem;
         }
 
         .footer>div:nth-child(2),
@@ -843,6 +873,10 @@
         .footer3 {
             text-align: left;
             width: 100%;
+        }
+        .follow{
+            grid-template-columns: 8% 8% 10%;    
+            justify-content: start;
         }
     }
 </style>
@@ -1010,7 +1044,7 @@
                                                     agree to the privacy policy</label>
                                             </div>
                                             <div>
-                                                <button type="button" class="btn" id="send">SEND TRAVEL REQUEST</button>
+                                                <button type="button" class="btn" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="send">SEND TRAVEL REQUEST</button>
                                             </div>
                                         </div>
                                     </div>
@@ -1167,7 +1201,7 @@
                     </p>
                 </div>
                 <div class="footer1">
-                    <p>ABOUT US</p>
+                    <h3>ABOUT US</h3>
                     <div>
                         <P>ABOUT ECOTOUR</P>
                         <P>BARAHONA</P>
@@ -1177,7 +1211,7 @@
                     </div>
                 </div>
                 <div class="footer1">
-                    <p>CUSTOMER SERVICE</p>
+                    <h3>CUSTOMER SERVICE</h3>
                     <div>
                         <P>BOOKING CONDITIONS</P>
                         <P>CONTACT-US</P>
@@ -1187,7 +1221,7 @@
                     </div>
                 </div>
                 <div class="footer2">
-                    <p>RESERVATIONS AND BOOKINGS</p>
+                    <h3>RESERVATIONS AND BOOKINGS</h3>
                     <div>
                         <p>MONDAY TO FRIDAY</p>
                         <p>from 8:00 am to 8:00 pm</p>
@@ -1202,7 +1236,7 @@
                     </div>
                 </div>
                 <div class="footer3">
-                    <p>FOLLOW US</p>
+                    <h3>FOLLOW US</h3>
                     <div class="follow">
                         <div>
                             <i class="fa-brands fa-facebook-f"></i>
