--- a/private-tour.html
+++ b/private-tour.html
@@ -788,9 +788,9 @@
                 padding: 0;
             }
 
-            /* .nav a {
+            .nav a {
                 font-size: 0.6rem;
-            } */
+            }
 
             .tailor,
             .group {
