--- a/private-tour.html
+++ b/private-tour.html
@@ -779,7 +779,7 @@
             .nav>div {
                 display: grid;
                 /* grid-template-columns: repeat(2,50%); */
-                grid-template-columns: 30% 30% 40%;
+                grid-template-columns:50% 50%;
                 justify-content: space-between;
                 text-align: left;
             }
@@ -788,9 +788,9 @@
                 padding: 0;
             }
 
-            .nav a {
+            /* .nav a {
                 font-size: 0.6rem;
-            }
+            } */
 
             .tailor,
             .group {
