--- a/destination.html
+++ b/destination.html
@@ -328,7 +328,7 @@
         .sec6>div {
             height: 550px;
             display: grid;
-            grid-template-columns: repeat(2, 50%);
+            grid-template-columns: 40% 60%;
             align-items: center;
             padding-top: 70px;
         }
@@ -582,10 +582,6 @@
 
             .sec7 h4 {
                 font-size: 1.78rem;
-            }
-
-            .imge {
-                display: none;
             }
         }
     </style>
