--- a/private-tour.html
+++ b/private-tour.html
@@ -69,7 +69,7 @@
         }
 
         .main-head {
-            width: 90%;
+            width: 80%;
             margin: auto;
             display: flex;
             justify-content: space-between;
@@ -154,7 +154,7 @@
         }
 
         .nav>div {
-            width: 98%;
+            width: 85%;
             margin: auto;
             display: flex;
             /* grid-template-columns: repeat(4, 15%); */
@@ -200,7 +200,7 @@
         }
 
         .speed {
-            width: 90%;
+            width: 80%;
             height: 400px;
             margin: auto;
             display: grid;
@@ -224,7 +224,7 @@
         }
 
         .privatize {
-            width: 90%;
+            width: 80%;
             margin: auto;
             text-align: center;
             padding: 50px 0;
@@ -244,7 +244,7 @@
         }
 
         .tg {
-            width: 90%;
+            width: 80%;
             margin: auto;
             display: grid;
             grid-template-columns: 50% 50%;
@@ -272,7 +272,7 @@
             background-image: url(images/nature.webp);
             background-repeat: no-repeat;
             background-size: cover;
-            padding: 40px 0 150px 0;
+            padding: 40px 0 208px 0;
         }
 
         .nature::after {
@@ -292,16 +292,16 @@
             color: white;
             font-size: 2em;
             justify-content: center;
-            padding: 20px;
+            margin: 81px;
         }
 
         .alpha {
             display: grid;
             align-items: center;
-            width: 90%;
+            width: 80%;
             margin: auto;
             background-color: rgba(0, 0, 0, 0.5);
-            height: 250px;
+            height: 365px;
         }
 
         .icon {
@@ -425,7 +425,7 @@
         }
 
         .getin {
-            width: 70%;
+            width: 60%;
             margin: auto;
             text-align: center;
             padding: 50px;
@@ -444,7 +444,7 @@
         }
 
         .pic1 {
-            width: 90%;
+            width: 80%;
             margin: auto;
             display: grid;
             grid-template-columns: 40% 29% 30%;
@@ -497,7 +497,7 @@
         }
 
         .pic2 {
-            width: 90%;
+            width: 80%;
             margin: auto;
             display: grid;
             grid-template-columns: 30% 29% 40%;
@@ -540,7 +540,8 @@
         }
 
         .last h3 {
-            padding: 40px 74px;
+            /* padding: 40px 74px; */
+            margin: 40px 135px;
             font-size: 3rem;
             font-family: initial;
             color: #4b5b34;
@@ -552,19 +553,19 @@
             /* gap: 73px 19px; */
             /* padding: 0 0 0 70px; */
             gap: 20px;
-            margin: 0 0 31px 79px;
+            margin: 0 0 31px 126px;
             padding: 10px;
         }
 
         .meet-guides {
-            margin: 0 0 20px 86px;
+            margin: 0 0 20px 130px;
         }
 
         .expert button {
             background-color: yellowgreen;
             color: white;
             border: none;
-            padding: 10px 35px;
+            padding: 10px 22px;
             /* font-variant: small-caps; */
             font-family: sans-serif;
             font-size: small;
@@ -580,7 +581,7 @@
         }
 
         .fant-box2 {
-            width: 93%;
+            width: 83%;
             background-color: white;
             padding: 50px;
         }
@@ -605,7 +606,7 @@
 
         .review>div {
             width: 5%;
-            height: 30px;
+            height: 23px;
             border-radius: 50%;
             border: solid rgb(0 166 128);
             background-color: rgb(0 166 128)
@@ -639,7 +640,7 @@
             background-color: rgb(179 220 108);
             display: grid;
             grid-template-columns: 50% 50%;
-            padding: 80px 269px;
+            padding: 80px 327px;
         }
 
         .book-now {
@@ -681,7 +682,7 @@
             /* grid-template-columns:20% 13% 18% 20% 14%; */
             grid-template-columns: 20% 15% 18% 20% 12%;
             /* grid-template-columns: repeat(5, 1fr); */
-            width: 90%;
+            width: 80%;
             margin: auto;
             padding: 50px 0;
             justify-content: space-between;
@@ -979,7 +980,7 @@
                     <label for="tap1">
                         &#x2630
                     </label>
-                    <label for="tap2">
+                    <label for="tap2" style="font-size: 2rem;">
                         &#x2630
                     </label>
                 </div>
