--- a/tour-list-expand.html
+++ b/tour-list-expand.html
@@ -194,6 +194,7 @@
 
 
         .smlogo>div h3 {
+            margin-bottom: 0;
             font-size: 15px;
             font-weight: 200;
         }
@@ -394,7 +395,7 @@
 
         .com {
             text-align: center;
-            padding: 20px;
+            padding: 28px;
 
         }
 
@@ -573,7 +574,7 @@
 
             .nav li {
                 width: 50%;
-                margin:10px 0px;
+                margin:5px 0px;
             }
 
             .smlogo>div {
