--- a/private-tour.html
+++ b/private-tour.html
@@ -61,6 +61,7 @@
         label[for="tap1"],
         label[for="tap2"] {
             cursor: pointer;
+            font-size: 2rem;
         }
 
 
@@ -644,7 +645,7 @@
         }
 
         .book-now {
-            width: 90%;
+            width: 80%;
             margin: auto;
             display: grid;
             grid-template-columns: 30% 70%;
@@ -785,8 +786,12 @@
                 text-align: left;
             }
 
+            .nav-div>li>a{
+                font-size: small;
+            }
+
             .nav {
-                padding: 0;
+                padding: 15px 0;
             }
 
             /* .nav a {
@@ -859,7 +864,7 @@
             }
 
             .last h3{
-                padding: 0;
+                margin: 0;
                 font-size: 2em;
             }
             .expert {
@@ -871,10 +876,12 @@
                 /* margin-right: 79px;
                 margin-left: 70px;
                 grid-template-columns: 50% 50%;
-                padding: 10px; */
+                padding: 10px;
                 padding: 0 78px;
-                margin-left: 0;
+                margin-left: 0; */
                 row-gap: 30px;
+                margin: 10%;
+                margin-top: 0;
             }
 
             .last>:first-child {
@@ -894,6 +901,7 @@
             }
 
             .fant-box {
+                width: 80%;
                 padding: 0;
             }
 
@@ -902,8 +910,8 @@
             }
 
             .fant-box3 {
-                /* grid-template-columns: 100%; */
-                margin: 0 0 0 65px;
+                grid-template-columns: 40% 60%;
+                /* margin: 0 0 0 65px; */
             }
 
             .foot-bg {
@@ -915,9 +923,9 @@
                 align-items: center;
             }
 
-            .book-now img {
+            /* .book-now img {
                 margin: 5px;
-            }
+            } */
 
             .foot {
                 grid-template-columns: 100%;
@@ -980,7 +988,7 @@
                     <label for="tap1">
                         &#x2630
                     </label>
-                    <label for="tap2" style="font-size: 2rem;">
+                    <label for="tap2">
                         &#x2630
                     </label>
                 </div>
